# paddle.py

./: .buildinfo  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  api.html  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: docs.yml  release.yml
_sources/: examples.rst.txt  installation.rst.txt
_sources/source/: paddle.aio.rst.txt  paddle.rst.txt  paddle.utils.rst.txt
_static/: custom.css
docs/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
docs/_templates/: layout.html
docs/source/: modules.rst
examples/customers/: async.py  sync.py
examples/prices/: async.py  sync.py
paddle/: __init__.py  client.py
paddle/aio/: client.py
paddle/models/resources/: __init__.py  customer.py  customers.py  price.py  prices.py  product.py  products.py  subscriptions.py
paddle/models/responses/: __init__.py  customer.py  price.py  prices.py  product.py  products.py  shared.py  subscriptions.py
paddle/utils/: helpers.py
source/: modules.html  paddle.aio.html  paddle.html  paddle.utils.html
tests/: test_resources.py  test_responses.py
